upgraded to bootstrap 4 and fixed bugs here and there

--- a/backend/sections/analysis.pug
+++ b/backend/sections/analysis.pug
@@ -9,7 +9,9 @@ p In this section, we don't address "why it is right and necessary" (the
     | is a legitimate good reason, but separated from this document), but rather, the technical reasons of our approach based on a browser extension and scraping, as the most effective method to realize algorithm analysis and third party accountability of platforms which deploy personalized algorithms.
 ol
     li We do not rely on APIs because they can be blocked or limited by the platform, but instead rely on crowdsourced, voluntarily disclosed data.
-    li We don't (and shouldn't) rely on an individual point of observation to run tests. This is the approach used by algotransparency.org, and we should acknowledge two of their important achievements:
+    li We don't (and shouldn't) rely on an individual point of observation to run tests. This is the approach used by 
+        a(class="yellow" href="https://algotransparency.org") algotransparency.org
+        |, and we should acknowledge two of their important achievements:
         ol
             li The simplicity of their communication. Despite the fact that the issue of algorithms is personalisation, it is already an achievement to display the existance and impact of algorithms, especially for storytelling around on polarizing topics  or with heated debate, such as health, science, politics.
             li Their research on visualisation is something we should learn from and, where possible, reuse to provide continuity in the analysis.
