--- a/backend/sections/downloads.pug
+++ b/backend/sections/downloads.pug
@@ -1,7 +1,8 @@
 .container-fluid.centered
-    .col-md-6
-        a(target="_blank" href="https://chrome.google.com/webstore/detail/yttrex/kbbgjcgdcibilpahljnlejefcehbljnd")
-            img(src="/images/ChromeWebStore_Badge_v2_206x58.png")
-    .col-md-6
-        a(target="_blank" href="https://addons.mozilla.org/en-US/firefox/addon/yttrex/")
-            img(src="/images/AMO-button_1.png")
+    .row
+        .col
+            a(target="_blank" href="https://chrome.google.com/webstore/detail/yttrex/kbbgjcgdcibilpahljnlejefcehbljnd")
+                img(src="/images/ChromeWebStore_Badge_v2_206x58.png")
+        .col
+            a(target="_blank" href="https://addons.mozilla.org/en-US/firefox/addon/yttrex/")
+                img(src="/images/AMO-button_1.png")
