--- a/backend/sections/header.pug
+++ b/backend/sections/header.pug
@@ -1,18 +1,15 @@
-nav.navbar.navbar-default.navbar-static-top(style="font-size:1.5em;")
-    div.container
-        div.navbar-header
-            button.navbar-toggle.collapsed(type="button" data-toggle="collapse" data-target="#thenavbar" aria-expanded="false")
-                span(id="sr-only") Toggle navigation
-                span.icon-bar
-                span.icon-bar
-                span.icon-bar
+.container
+    nav.navbar.navbar-expand-lg.navbar-light.bg-light
+        a.navbar-brand(href='/') ytTREX
+        button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarNav', aria-controls='navbarNav', aria-expanded='false', aria-label='Toggle navigation')
+            span.navbar-toggler-icon
 
-        div.collapse.navbar-collapse(id="thenavbar")
-            ul.nav.navbar-nav
-                li
-                    a(href="https://github.com/tracking-exposed/yttrex") github repo
+        #navbarNav.collapse.navbar-collapse
+            ul.navbar-nav
+                li.nav-item
+                    a.nav-link(href="https://github.com/tracking-exposed/yttrex") github repo
                         img.githublogo(src="/images/github-256.png")
-                li
-                    a(href='/data') play with the data
-                li
-                    a(href='/about') about
+                li.nav-item
+                    a.nav-link(href='/data') play with the data
+                li.nav-item
+                    a.nav-link(href='/about') about
