still a lot do do

--- a/backend/sections/index.pug
+++ b/backend/sections/index.pug
@@ -23,16 +23,16 @@ html
     title ytTREX
 
   body
-
     include header
     
     .container-fluid.padded
-
         p A tool providing a small experimental infrastructure for the youtube algorithm analysis
-        p This is far to be completed, but is a good beginning. To see our process, you can read the first two years of experiences made with facebook.tracking.exposed, or read the spring 2019 youtute.tracking.exposed roadmap.
 
     .container-fluid.spaced.padded
         include downloads
+
+    .container-fluid.spaced.padded
+        p This is far to be completed, but is a good beginning. To see our process, you can read the first two years of experiences made with facebook.tracking.exposed, or read the spring 2019 youtute.tracking.exposed roadmap.
 
         h2 experimental services and APIs
         include data
