fixed an inclusion bug

--- a/backend/sections/index.pug
+++ b/backend/sections/index.pug
@@ -35,7 +35,7 @@ html
         p This is far to be completed, but is a good beginning. To see our process, you can read the first two years of experiences made with facebook.tracking.exposed, or read the spring 2019 youtute.tracking.exposed roadmap.
 
         h2 experimental services and APIs
-        include data
+        include api
 
     .container-fluid.spaced.padded
         include analysis
