--- a/backend/sections/data.pug
+++ b/backend/sections/data.pug
@@ -25,9 +25,10 @@ html
   body
     include header
 
-    p Whatver you ask to us, keep in mind: 
-        b this tool is mean to analyze youtube, not the content producer, not the content consumers
-        |. Feel free to open an issue in our 
-        a(href="https://github.com/tracking-exposed/yttrex/issues") ticketing system
-        |, if you have an interesting proposal
-    include api
+    .container-fluid
+        p Whatver you ask to us, keep in mind: 
+            b this tool is mean to analyze youtube, not the content producer, not the content consumers
+            |. Feel free to open an issue in our 
+            a(href="https://github.com/tracking-exposed/yttrex/issues") ticketing system
+            |, if you have an interesting proposal
+        include api
