fixed the two missing fields in parser

--- a/backend/sections/analysis.pug
+++ b/backend/sections/analysis.pug
@@ -5,8 +5,8 @@ p youtube.tracking.exposed takes its inspiration, methods, experience, and code 
 
 h3 Reason
 p In this section, we don't address "why it is right and necessary" (the 
-    a(class="yellow" href="/outrage") political outrage 
-    | is a legitimate good reason, but separated from this document), but rather, the technical reasons of our approach based on a browser extension and scraping, as the most effective method to realize algorithm analysis and third party accountability of platforms which deploy personalized algorithms.
+    a(class="yellow" href="/outrage") political issue on social network power
+    |  is a legitimate good reason, but addressed in a separated page), rather, the technical reasons of our approach based on a browser extension and scraping, as the most effective method to realize algorithm analysis and third party accountability of platforms which deploy personalized algorithms.
 ol
     li We do not rely on APIs because they can be blocked or limited by the platform, but instead rely on crowdsourced, voluntarily disclosed data.
     li We don't (and shouldn't) rely on an individual point of observation to run tests. This is the approach used by 
