--- a/backend/styles/index.styl
+++ b/backend/styles/index.styl
@@ -147,3 +147,7 @@ h1.text
 /* override bootstrap */
 .navbar-default
     background-color white
+
+/* only for pre */
+.azure
+    background azure
