--- a/backend/sections/api.pug
+++ b/backend/sections/api.pug
@@ -5,7 +5,7 @@ ul
         code /api/v1/last
         p It return JSON objects: the last 60 contributins received by the community. It is cached for 2 minutes, the first request after cache expire would define the next 60.
     li 
-        a(class="yellow" href="/api/v1/videoId/f6jlvXWwhEo") Compare videos
+        a(class="yellow" href="/compare/f6jlvXWwhEo") Compare videos
         br
         code /api/v1/videoId/
             b [variable:videoId]
