--- a/backend/sections/about.pug
+++ b/backend/sections/about.pug
@@ -24,26 +24,25 @@ html
 
   body
     include header
-    .container-fluid 
-        p
-            ul.yt--icon-list
-                li Reviews, testing and contributes from: ... 
-                    smaller when you contribute, you can add yourself here. discuss your patch on the 
-                        a(href="https://github.com/tracking-exposed/yttrex/issues " target="_blank") issues
-                        |.
-                li Logo designed by 
-                    a(href="https://twitter.com/lucacorsato" target="_blank") Luca Corsato
-                    |, browser extension based on 
-                    a(href="https://twitter.com/vrde" target="_blank") Alberto Granzotto
-                    |.
-                li The project is lead by
-                    a(href="https://twitter.com/_vecna" target="_blank") Claudio Agosti
-                    |, and important feedback and help comes from 
-                    a(href="https://twitter.com/_hackbunny") Giulia Q.
-                    |   and the anonymous friend who opt-out from here ;)
-                li code 
-                    a(href="https://github.com/tracking-exposed/yttrex/graphs/contributors" target="_blank") contributors
-                    |.
-                li 
-                    b Contacts
-                    |: support at tracking dot exposed 
+    .container
+        p Project lead by 
+            a(href="https://twitter.com/_vecna" target="_blank") Claudio Agosti
+            |, Important inputs comes from 
+            a(href="https://twitter.com/_hackbunny") Giulia Q
+            |, and the anonymous friends who opted-out ¯\_(ツ)_/¯
+            br
+            | Browser extension based on 
+            a(href="https://twitter.com/vrde" target="_blank") Alberto Granzotto
+            |'s design of 
+            a(href="https://facebook.tracking.exposed") fbtrex web-extension
+            |.
+            br
+            | The software is in AGPL license, 
+            a(href="https://github.com/tracking-exposed/yttrex/graphs/contributors" target="_blank") contributors
+            |  should add their name in this page.
+        p 
+            b Contacts
+            |: support at tracking dot exposed; Our mattermost channel 
+            a(href="https://chat.securitywithoutborders.org/community/channels/trackingexposed") #trackingexposed
+            |.
+
