--- a/backend/sections/personal/landing.pug
+++ b/backend/sections/personal/landing.pug
@@ -22,8 +22,9 @@ html
     body(onload="personalLoader();")
 
         include ../header
-        .container-fluid
-
-            h3 Incomplete page
-            p there was an old idea on how to let you compare your related video with the one of your friends, but at the moment you might just enjoy this personal log:
+        .container
+            h2 Personal interface: this link is only know by you; keep it private
+            p From this interface you should see the recorded session you sent us, delete, and download. In theory. In practice: this is a
+                a(href="https://github.com/tracking-exposed/yttrex/issues") work in progress
+                |. At the moment, the controls are pretty limited.
             #whole
