moved the outdated experiments

--- a/backend/sections/personal/landing.pug
+++ b/backend/sections/personal/landing.pug
@@ -21,10 +21,12 @@ html
 
     body(onload="personalLoader();")
 
-        include ../header
+        include header
         .container
             h2 Personal interface: this link is only know by you; keep it private
             p From this interface you should see the recorded session you sent us, delete, and download. In theory. In practice: this is a
                 a(href="https://github.com/tracking-exposed/yttrex/issues") work in progress
                 |. At the moment, the controls are pretty limited.
             #whole
+
+        
