cleaned API, implemented a personal API with paging

--- a/backend/sections/personal/landing.pug
+++ b/backend/sections/personal/landing.pug
@@ -27,6 +27,8 @@ html
             p From this interface you should see the recorded session you sent us, delete, and download. In theory. In practice: this is a
                 a(href="https://github.com/tracking-exposed/yttrex/issues") work in progress
                 |. At the moment, the controls are pretty limited.
+
+        .container
             #whole
 
         
