implemented decent version of the personal page

--- a/backend/sections/personal/landing.pug
+++ b/backend/sections/personal/landing.pug
@@ -19,16 +19,16 @@ html
         meta(property="og:title" content="Personal poage")
         title yttrex, personal page
 
-    body(onload="personalLoader();")
+    body(onload="personal();")
 
         include header
         .container
             h2 Personal interface: this link is only know by you; keep it private
-            p From this interface you should see the recorded session you sent us, delete, and download. In theory. In practice: this is a
+            p From this interface you should see the recorded session you sent us, delete, and download. 
+                i In theory. 
+                |  In practice: this is a 
                 a(href="https://github.com/tracking-exposed/yttrex/issues") work in progress
-                |. At the moment, the controls are pretty limited.
+                |. At the moment, the controls and the export are pretty limited.
 
         .container
-            #whole
-
-        
+            #report
