--- a/backend/sections/data.pug
+++ b/backend/sections/data.pug
@@ -26,11 +26,11 @@ html
     include header
 
     .container
-        p Whatver you ask to us, keep in mind: 
-            b this tool is mean to analyze youtube, not the content producer, not the content consumers
+        p Whatever you ask us, keep in mind that: 
+            b this tool is mean to analyze youtube, not the content producer, nor the content consumers
             |. Feel free to open an issue in our 
             a(href="https://github.com/tracking-exposed/yttrex/issues") ticketing system
-            |, if you have an interesting proposal
+            |, if you have an interesting proposal.
         include api
 
     .container
@@ -57,7 +57,7 @@ html
 
     .container
 
-        p This is the distribution of collected suggestions across the months, every color represent a different partecipant (watcher, in the dataset). Every person behind our browser extension has a pseudonym (which depends from their public key, by reinstalling the extension you'll change it) like 
+        p This is the distribution of collected suggestions across the months, every color represents a different participant (watcher, in the dataset). Every person behind our browser extension has a random pseudonym (which depends from their public key, by reinstalling the extension you'll change it) like 
             i collards-icecream-peach
             |.
         .centered
@@ -65,17 +65,17 @@ html
 
         p Here you can see which video in our dataset have been seen by more than one user. We look for this condition, because in this way we can compare if the 
             i related videos
-            |  are the same or not. How many of them are 
-            i suggested for you
-            |  (implying some kind of content prsonalization), and how many other simply change for geographical reason?
+            |  are the same or not. How many of them are suggested 
+            i to you
+            |  (implying some kind of content personalization), and how many other are simply related to the particular geographical region?
         .centered
             img(src="https://user-images.githubusercontent.com/89555/56743916-c5dee880-6777-11e9-9e87-08d020ff8ed1.png")
 
-        p We have some option, I pick a John Oliver as reference. As you can see, from my screenshot I copied some of the suggested videos. The point of compating how algorithms treat us, individually, in a personalized way, pass through comparing how we get personalized suggestions.
+        p We have some option, I pick a John Oliver as reference. As you can see, from my screenshot I copied some of the suggested videos. The point of comparing how algorithms treat us, individually, in a personalized way, pass through comparing how we get personalized suggestions.
         .centered
             img(src="https://user-images.githubusercontent.com/89555/56743931-ca0b0600-6777-11e9-8825-f6bfbd80ca48.png")
 
-        p The three profiles accessed in different moment in time. As you can see above, the video was published in June 2018, but the profiles caputre evideences from February and March 2019. This is something to keep in account when running comparison. It is not difficult for you and a friend, share a list of video and watch them in sequence. This would permit to this couple of researchers (or a group, or a single person managing three different profiles with VPNs) to get more compareable results.
+        p The three profiles accessed in different moment in time. As you can see above, the video was published in June 2018, but the profiles capture evidences from February and March 2019. This is something to keep in account when running comparisons. It is not difficult to do for you and a friend, just share a list of video and watch them in sequence. This would permit to this couple of researchers (or a group, or a single person managing three different profiles with VPNs) to get more comparable results.
         .centered
             img(src="https://user-images.githubusercontent.com/89555/56744644-33d7df80-6779-11e9-8dcf-d6eb6d5215cd.png")
 
@@ -83,7 +83,7 @@ html
         .centered
             img(src="https://user-images.githubusercontent.com/89555/56743946-d1321400-6777-11e9-9c84-5f97de2b0b63.png")
 
-        p Here you can see another video compared. The first four columns comes from the same profile: some suggestion keep being the same, other changes. This means, even the data you might collect about your own person treatment might show you something about how Youtube has profiled you.
+        p Here you can see another video compared. The first four columns comes from the same profile: some suggestion keep being the same, other change. This means, even the data you might collect just about your own person might show you something about how Youtube has profiled you.
         .centered
             img(src="https://user-images.githubusercontent.com/89555/56743956-d4c59b00-6777-11e9-815e-f34f67c9bb28.png")
 
