--- a/backend/sections/index.pug
+++ b/backend/sections/index.pug
@@ -32,7 +32,7 @@ html
         include downloads
 
     .container-fluid.spaced.padded
-        p This is far to be completed, but is a good beginning. To see our process, you can read the first two years of experiences made with facebook.tracking.exposed, or read the spring 2019 youtute.tracking.exposed roadmap.
+        p This is far from being completed, but it is a good beginning. If you want to understand how we work, you can look up the first two years of experiences made with facebook.tracking.exposed, or read the spring 2019 youtute.tracking.exposed roadmap.
 
         h2 experimental services and APIs
         include api
