--- a/backend/sections/api.pug
+++ b/backend/sections/api.pug
@@ -1,18 +1,18 @@
 ul
     li 
-        a(class="yellow" href="/api/v1/last") Last evidence received
+        a(class="yellow" href="/api/v1/last") Last received evidence
         br
         code /api/v1/last
-        p It return JSON objects: the last 60 contributins received by the community. It is cached for 2 minutes, the first request after cache expire would define the next 60.
+        p It returns JSON objects: the last 60 contributions received by the community. It is cached for 2 minutes, the first request after cache expires would define the next 60.
     li 
         a(class="yellow" href="/compare/f6jlvXWwhEo") Compare videos
         br
         code /api/v1/videoId/
             b [variable:videoId]
-        p from a youtube URL, take the Id: 
+        p it takes the id from a YouTube url, e.g. 
             i https://www.youtube.com/watch?v=
             b 4-VLmhQSzr8
-            |  and returns a JSON object all the different 'related' videos observed when the same videoId have been watched by ytTREX contributors. Max 110 evidences are returned.
+            |,  and returns a JSON object containing all the different 'related' videos observed when the same videoId have been watched by ytTREX contributors. Maximum 110 evidences are returned.
     li
         a(class="yellow" href="/api/v1/related/Z7MC8Lw5e9Q") Related
         br
