implemented a decent comparison of videos

--- a/backend/sections/404.pug
+++ b/backend/sections/404.pug
@@ -14,10 +14,12 @@ html
   body
     include header
 
-    .container-fluid.center
-        h1 Page not found!
+    .container
+        h2 Page not found =(
 
-        h3 You found a broken link! if you feel chatty, please drop a line to 'support @ tracking . exposed' 
-            |, or if you are interested to the internals, look at 
-            a(href="https://github.com/tracking-exposed/yttrex") the code
+        p You found a broken link! if you feel chatty, please join our chat in Mattermost and tell us the problem, or drop a line to 'support @ tracking . exposed' 
+
+        h2 ...but this is free software!
+        p If you are into code internals, this our 
+            a(href="https://github.com/tracking-exposed/yttrex") repository
             |.
