--- a/backend/sections/compare.pug
+++ b/backend/sections/compare.pug
@@ -14,6 +14,7 @@ html
     script(type='text/javascript', src='/js/isotope.pkgd.min.js')
 
     link(rel='stylesheet', href='/js/local/index.css')
+    link(rel='stylesheet', href='/js/local/compare.css')
     script(type='text/javascript', src='/js/local/compare.js')
 
     meta(property="og:title" content="ytTREX")
@@ -31,8 +32,14 @@ html
     include header
     
     .container-fluid.spaced.padded
-        h2 Recent
-        #recent
+        h2 https://www.youtube.com/watch?v=
+            span.videoId VIDEOID
+            |  →  https://youtube.tracking.exposed/compare/
+            span.videoId VIDEOID
+           
+        #comparison
 
     .container-fluid.spaced.padded
-        #comparison
+        h2 Try in our recent collections
+        #recent
+
