--- a/backend/sections/api.pug
+++ b/backend/sections/api.pug
@@ -5,7 +5,7 @@ ul
         code /api/v1/last
         p It returns JSON objects: the last 60 contributions received by the community. It is cached for 2 minutes, the first request after cache expires would define the next 60.
     li 
-        a(class="yellow" href="/compare/f6jlvXWwhEo") Compare videos
+        a(class="yellow" href="/compare/f6jlvXWwhEo") Try to compare videos
         br
         code /api/v1/videoId/
             b [variable:videoId]
@@ -14,7 +14,7 @@ ul
             b 4-VLmhQSzr8
             |,  and returns a JSON object containing all the different 'related' videos observed when the same videoId have been watched by ytTREX contributors. Maximum 110 evidences are returned.
     li
-        a(class="yellow" href="/api/v1/related/Z7MC8Lw5e9Q") Related
+        a(class="yellow" href="/related/Z7MC8Lw5e9Q") Search if a video was among the related
         br
         code /api/v1/related/
             b [variable:videoId]
